--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -11,6 +11,26 @@
             VerticalAlignment="Top"
             Width="172"
             Click="Button_Click" />
+        <Rectangle
+            HorizontalAlignment="Left"
+            Height="63"
+            Margin="65,24,0,0"
+            Stroke="Black"
+            VerticalAlignment="Top"
+            Width="382">
+            <Rectangle.Fill>
+                <LinearGradientBrush
+                    EndPoint="0.5,1"
+                    StartPoint="0.5,0">
+                    <GradientStop
+                        Color="Black"
+                        Offset="0" />
+                    <GradientStop
+                        Color="White"
+                        Offset="1" />
+                </LinearGradientBrush>
+            </Rectangle.Fill>
+        </Rectangle>
 
     </Grid>
 </Window>
